test/libsolidity/syntaxTests/literalSuffixes/usableAsSuffix/invalid_suffix_called_unicode.sol
function unicode(string memory) pure suffix returns (string memory) {}

contract C {
    string s = unicode"😃"unicode;
}
// ----
// ParserError 2314: (9-16): Expected identifier but got 'ILLEGAL'
